added warranty-plan to routing

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -9,6 +9,7 @@ imports:
 
     - { resource: "parameters.yml" }
     - { resource: "security.yml" }
+    - { resource: "resources.yml" }
 
 parameters:
     locale: en_US
