added warranty-plan to admin

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -10,6 +10,7 @@ imports:
     - { resource: "parameters.yml" }
     - { resource: "security.yml" }
     - { resource: "resources.yml" }
+    - { resource: "grids.yml" }
 
 parameters:
     locale: en_US
