--- a/app/config/grids.yml
+++ b/app/config/grids.yml
@@ -1,5 +1,10 @@
 sylius_grid:
     grids:
+        sylius_admin_customer:
+            fields:
+                warrantyPlan:
+                    type: string
+                    label: app.ui.warranty_plan
         app_admin_warranty_plan:
             driver:
                 name: doctrine/orm
